src/app/components/navbar/navbar.component.scss
@import "../../../theme";
@import "../../../constants";

.container {
  $item-top-padding: 0.8rem;

  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.5rem 2rem;
  height: $navbar-height;

  &.hidden {
    opacity: 0;
    margin-top: -7rem;
  }

  .logo {
    padding: $item-top-padding 0.5rem;

    img {
      height: 2rem;
    }
  }

  .search {
    width: 100%;
    margin: 0 2rem;
    background: $hover-background;
    border-radius: 0.5rem;
    display: flex;
    align-items: center;
    padding: $item-top-padding 1.5rem;

    i {
      font-size: 1.2rem;
      margin-right: 1rem;
    }

    input {
      width: 100%;
      outline: none;
      border: none;
      background: none;
    }
  }

  .routes {
    display: flex;
    align-items: center;

    .route {
      padding: $item-top-padding 2rem;
      display: flex;
      align-items: center;
      border-radius: 0.5rem;
      cursor: pointer;

      i {
        margin-right: 0.5rem;
        font-size: 1.3rem;
      }

      .name {
        white-space: nowrap;
      }

      &.outlined {
        border: 2px solid $color-disabled;
      }

      &:hover {
        background: $hover-background;
      }
    }

    .status {
      margin-left: 1rem;
      margin-right: 2rem;

      img {
        width: 3rem;
      }

      i {
        font-size: 1.5rem;
      }
    }

    .user {
      white-space: nowrap;

      .profile {
        display: flex;
        justify-content: center;
        align-items: center;

        height: 2rem;
        width: 2rem;
        padding: 1.5rem;
        border-radius: 5rem;
        cursor: pointer;

        &:hover {
          background: $hover-background;
        }

        img {
          width: inherit;
          height: inherit;
          border-radius: inherit;
        }
      }
    }
  }
}

